--- a/PhoneBook/PhoneBook.csproj
+++ b/PhoneBook/PhoneBook.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Commands\AddCommand.cs" />
+    <Compile Include="Commands\DelCommand.cs" />
+    <Compile Include="Commands\SaveCommand.cs" />
     <Compile Include="ViewModels\DataManager.cs" />
     <Page Include="Dictionaries\Dictionary1.xaml">
       <SubType>Designer</SubType>
